update dependencies and migrate to Java 25