@@ -49,10 +49,10 @@ public final class CommandECloudExpansionInfo extends PlaceholderCommand {
         }
 
         final CloudExpansion expansion = plugin.getCloudExpansionManager()
-                .findCloudExpansionByName(params.get(0)).orElse(null);
+                .findCloudExpansionByName(params.getFirst()).orElse(null);
         if (expansion == null) {
             Msg.msg(sender,
-                    "&cThere is no expansion with the name: &f" + params.get(0));
+                    "&cThere is no expansion with the name: &f" + params.getFirst());
             return;
         }
 
@@ -117,12 +117,12 @@ public final class CommandECloudExpansionInfo extends PlaceholderCommand {
         if (params.size() <= 1) {
             final Stream<String> names = plugin.getCloudExpansionManager().getCloudExpansions().values()
                     .stream().map(CloudExpansion::getName).map(name -> name.replace(' ', '_'));
-            suggestByParameter(names, suggestions, params.isEmpty() ? null : params.get(0));
+            suggestByParameter(names, suggestions, params.isEmpty() ? null : params.getFirst());
             return;
         }
 
         final Optional<CloudExpansion> expansion = plugin.getCloudExpansionManager()
-                .findCloudExpansionByName(params.get(0));
+                .findCloudExpansionByName(params.getFirst());
         if (!expansion.isPresent()) {
             return;
         }
