@@ -51,10 +51,10 @@ public final class CommandECloudExpansionPlaceholders extends PlaceholderCommand
         }
 
         final CloudExpansion expansion = plugin.getCloudExpansionManager()
-                .findCloudExpansionByName(params.get(0)).orElse(null);
+                .findCloudExpansionByName(params.getFirst()).orElse(null);
         if (expansion == null) {
             Msg.msg(sender,
-                    "&cThere is no expansion with the name: &f" + params.get(0));
+                    "&cThere is no expansion with the name: &f" + params.getFirst());
             return;
         }
 
@@ -90,7 +90,7 @@ public final class CommandECloudExpansionPlaceholders extends PlaceholderCommand
                 .map(CloudExpansion::getName)
                 .map(name -> name.replace(' ', '_'));
 
-        suggestByParameter(names, suggestions, params.isEmpty() ? null : params.get(0));
+        suggestByParameter(names, suggestions, params.isEmpty() ? null : params.getFirst());
     }
 
 }
